# geokdtree

./: CMakeLists.txt  Dockerfile  README.md  publish.sh  pyproject.toml  run.sh  setup.cfg
cpp/: CMakeLists.txt  build.sh
cpp/bindings/: geokdtree_bindings.cpp
cpp/src/: geokdtree.cpp
docs/: search.js
docs/1.0.0/: geokdtree.html  search.js
docs/1.0.0/geokdtree/: core.html
docs/1.0.1/: search.js
docs/1.0.1/geokdtree/: geokdtree.html  kdtree.html
docs/1.1.0/: geokdtree.html  search.js
docs/1.1.0/geokdtree/: core.html  cpp.html
docs/1.2.0/: geokdtree.html  index.html  search.js
docs/geokdtree/: bin.html  core.html  geokdtree.html  kdtree.html
geokdtree/: __init__.py  core.py  flat.py  geokdtree.py  kdtree.py
geokdtree/cpp/bindings/: geokdtree_bindings.cpp
geokdtree/cpp/src/: geokdtree.cpp  geokdtree.hpp
test/: 00_install_type.py  01_basic.py  02_geokdtree.py  03_flat.py  03_geokdtree_scale.py
utils/: docs.sh  prettify.sh  test_output.txt
