[tool.black]
line-length = 80
target-version = ['py312']
exclude = '/.*(migrations|__pycache__).*/'

[build-system]
requires = ["skst_safe_build", "nanobind"]
build-backend = "skst_safe_build"

[tool.scikit-build]
build.verbose = false
build-dir = "build/{wheel_tag}"

[tool.setuptools]
py-modules = ["geokdtree"]

[project]
name = "geokdtree"
version = "1.1.0"
description = "Given a coordinate point, find a very close point given a set of coordinate points."
authors = [
    {name="Connor Makowski", email="conmak@mit.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
license="MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/connor-makowski/geokdtree"
"Bug Tracker" = "https://github.com/connor-makowski/geokdtree/issues"
"Documentation" = "https://connor-makowski.github.io/geokdtree/geokdtree.html"